2005-04-21  David Hyatt  <hyatt@apple.com>

	Fix for 4095839, wrong background image used on flechtwerk.de.  Make sure that the global mapped
	attribute cache hashed background attributes into per-document buckets.

        * khtml/html/html_baseimpl.cpp:
        (HTMLBodyElementImpl::mapToEntry):
        * khtml/html/html_elementimpl.h:
        (DOM::):
        * khtml/html/html_tableimpl.cpp:
        (HTMLTableElementImpl::mapToEntry):
        (HTMLTablePartElementImpl::mapToEntry):
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::DocumentImpl):
        * khtml/xml/dom_docimpl.h:
        (DOM::DocumentImpl::docID):

2005-04-21  Vicki Murley  <vicki@apple.com>

	- layout test for 4065447, outerHTML on images

        * layout-tests/fast/dynamic/outerHTML-img-expected.txt: Added.
        * layout-tests/fast/dynamic/outerHTML-img.html: Added.

2005-04-20  Vicki Murley  <vicki@apple.com>

        Reviewed by hyatt.

	- fixed <rdar://problem/4065447> support outerHTML on IMG elements

        * khtml/html/html_elementimpl.cpp:
        (HTMLElementImpl::setOuterHTML):

2005-04-18  David Hyatt  <hyatt@apple.com>

	Fix min-height so that when it resolves to auto it does not use the box's intrinsic height.
	
        * khtml/rendering/render_box.cpp:
        (RenderBox::calcHeight):
        (RenderBox::calcHeightUsing):

2005-04-18  David Hyatt  <hyatt@apple.com>

        Back out fix for 4032346, since it is causing garbled image content on many sites.

	The bug tracking the fix is 4069093.
	
        (khtml::RenderBlock::matchedEndLine):

2005-04-18  David Hyatt  <hyatt@apple.com>

	Fix the smile in the Acid2 test.  Floats should not grow to contain other floats unless height is auto.  Otherwise
	the float should use the specified height.

	Also fix row 14 of the Acid2 test.  Although ambiguous, just modify the table cell baseline alignment code to align
	to the bottom of the cell's content height if no suitable baseline could be found.
	